--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 
 body {
   background-color: var(--base-100);
+  font-family: 'Roboto', sans-serif;
 }
 
 .navbar {
@@ -51,4 +52,87 @@ body {
 .nav-options li:hover {
   background-color: var(--accent);
   color: var(--base-200);
+}
+
+.hero {
+  display: flex;
+  justify-content: space-between;
+  height: 25rem;
+  width: 100vw;
+  border: 1px solid var(--error);
+
+  border-right: none;
+  border-left: none;
+  border-top: none;
+}
+
+.intro-parent {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 80rem;
+  margin-left: 3rem;
+  border: 1px solid var(--error);
+}
+
+.intro-header {
+  color: var(--base-200);
+  margin-top: 4rem;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-weight: 900;
+  font-size: 64px;
+}
+
+.intro-text {
+  color: var(--base-200);
+  font-weight: 400;
+  font-size: 24px;
+  margin-bottom: 4rem;
+  padding-left: 20px;
+  padding-right: 50px;
+}
+
+.img-box-parent {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  align-items: center;
+  margin-right: 6rem;
+  margin-left: 3rem;
+  border: 1px solid var(--error);
+}
+
+.img-box-parent > p {
+  margin-top: 1rem;
+  color: darkgray;
+  font-weight: 200;
+  font-style: italic;
+}
+
+.img-container {
+  margin-top: 1rem;
+  object-fit: contain;
+  overflow: hidden;
+  width: 20rem;
+  height: 20rem;
+  border: 1px solid var(--error);
+  border-radius: 200px;
+}
+
+.img-container img {
+  width: 100%;
+  height: 100%;
+}
+
+
+@media screen and (max-width: 490px) {
+  body{
+    width: 490px;
+  }
+
+  .hero {
+    width: 490px;
+  }
 }
