--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   --error: #d64654;
 
   --base-200: #fffeff; 
+  --contact: #219ebc;
  }
 
 * {
@@ -17,9 +18,14 @@
   padding: 0;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   background-color: var(--base-100);
   font-family: 'Roboto', sans-serif;
+  height: 100%;
 }
 
 .navbar {
@@ -44,9 +50,10 @@ body {
 }
 
 .nav-options li {
-  padding: 14px 4px 14px 4px;
+  padding: 18px 4px 18px 4px;
   color: var(--base-200);
-  font-size: large;
+  font-size: larger;
+  font-weight: 500;
 }
 
 .nav-options li:hover {
@@ -74,6 +81,8 @@ body {
   width: 80rem;
   margin-left: 3rem;
   border: 1px solid var(--error);
+  min-height: 100px;
+  overflow: hidden;
 }
 
 .intro-header {
@@ -128,6 +137,7 @@ body {
 
 .projects-section {
   display: flex;
+  flex-direction: column;
   width: 100vw;
   height: 500px;
   background-color: var(--info);
@@ -138,6 +148,69 @@ body {
   height: 50%;
   margin: auto;
   background-color: var(--accent);
+}
+
+.about-section {
+  display: flex;
+  justify-content: center;
+  background-color: #64DFDF;
+  height: 200px;
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60vw;
+  gap: 2rem;
+}
+
+.text-container > h2 {
+  font-style: italic;
+  margin-top: 1rem;
+}
+
+.text-container > p {
+  margin-bottom: 1rem;
+}
+
+.contact-section {
+  display: flex;
+  width: 100vw;
+  background-color: var(--contact);
+  height: 150px;
+}
+
+.logo-container {
+  display: flex;
+  gap: 4rem;
+  width: 50%;
+  height: 50%;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--contact);
+}
+
+.logo-container i {
+  cursor: pointer;
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  background-color: aliceblue;
+  width: vw;
+  margin: auto auto 0;
+  padding: 1rem;
+}
+
+.footer > p {
+  width: 100vw;
+  text-align: center;
+  font-style: italic;
 }
 
 
