--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ body {
   margin-left: 3rem;
   border: 1px solid var(--error);
   min-height: 100px;
-  overflow: hidden;
 }
 
 .intro-header {
@@ -138,7 +137,7 @@ body {
 .projects-section {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   height: 500px;
   background-color: var(--info);
 }
@@ -178,7 +177,7 @@ body {
 
 .contact-section {
   display: flex;
-  width: 100vw;
+  width: 100%;
   background-color: var(--contact);
   height: 150px;
 }
