--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 
   --base-200: #fffeff; 
   --contact: #219ebc;
+  --background: #0077b6;
  }
 
 * {
@@ -19,18 +20,21 @@
 }
 
 html, body {
-  height: 100%;
+  height: max-content;
 }
 
 body {
   background-color: var(--base-100);
   font-family: 'Roboto', sans-serif;
-  height: 100%;
+  height: max-content;
 }
 
 .navbar {
   display: flex;
   flex-direction: row;
+  position: fixed;
+  top: 0;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   background-color: var(--secondary);
@@ -39,21 +43,32 @@ body {
 .navbar > h2 {
   margin-left: 2rem;
   color: var(--base-200);
+  font-size: 30px;
 }
 
 .nav-options {
   display: flex;
+  min-height: 100%;
   list-style-type: none;
   margin-right: 2rem;
   gap: 2rem;
   cursor: pointer;
+  align-items: center;
 }
 
 .nav-options li {
+  height: 100%;
+  align-items: center;
   padding: 18px 4px 18px 4px;
   color: var(--base-200);
   font-size: larger;
   font-weight: 500;
+  font-size: 24px;
+}
+
+a, a:hover, a:visited, a:active {
+  color: inherit;
+  text-decoration: none;
 }
 
 .nav-options li:hover {
@@ -64,13 +79,10 @@ body {
 .hero {
   display: flex;
   justify-content: space-between;
-  height: 25rem;
+  height: 500px;
   width: 100vw;
-  border: 1px solid var(--error);
-
-  border-right: none;
-  border-left: none;
-  border-top: none;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .intro-parent {
@@ -78,9 +90,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  width: 80rem;
+  width: 80%;
   margin-left: 3rem;
-  border: 1px solid var(--error);
   min-height: 100px;
 }
 
@@ -96,8 +107,8 @@ body {
 .intro-text {
   color: var(--base-200);
   font-weight: 400;
-  font-size: 24px;
-  margin-bottom: 4rem;
+  font-size: 40px;
+  margin-bottom: 2rem;
   padding-left: 20px;
   padding-right: 50px;
 }
@@ -105,11 +116,10 @@ body {
 .img-box-parent {
   display: flex;
   flex-direction: column;
-  justify-self: center;
+  justify-content: center;
   align-items: center;
   margin-right: 6rem;
   margin-left: 3rem;
-  border: 1px solid var(--error);
 }
 
 .img-box-parent > p {
@@ -120,12 +130,11 @@ body {
 }
 
 .img-container {
-  margin-top: 1rem;
+  margin-top: 3rem;
   object-fit: contain;
   overflow: hidden;
   width: 20rem;
   height: 20rem;
-  border: 1px solid var(--error);
   border-radius: 200px;
 }
 
@@ -137,25 +146,75 @@ body {
 .projects-section {
   display: flex;
   flex-direction: column;
+  margin-top: 8rem;
+  text-align: center;
   width: 100%;
   height: 500px;
-  background-color: var(--info);
+}
+
+.projects-section > h2 {
+  margin-top: 1rem;
+  font-weight: 600;
+  font-style: italic;
+  font-size: 36px;
+  color: white;
 }
 
 .projects-container {
-  width: 50%;
-  height: 50%;
+  width: auto;
+  padding-left: 75px;
+  padding-right: 75px;
+  height: 75%;
   margin: auto;
-  background-color: var(--accent);
+  background-color: var(--background);
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+}
+
+.project-instructions {
+  margin-top: 0.5rem;
+  color: lightblue;
+  font-style: italic;
+  font-size: 16px;
+}
+
+.project-card {
+  width: 300px;
+  height: 300px;
+  background-color: lightblue;
+  border-radius: 25px;
+  object-fit: contain;
+}
+
+.projects-container p {
+  margin-top: 1rem;
+  color: white;
+  font-size: 20px;
+}
+
+.projects-container p:hover {
+  color: var(--success);
+}
+
+#card1 {
+  margin-left: 1rem;
+}
+
+#card3 {
+  margin-right: 1rem;
 }
 
 .about-section {
   display: flex;
+  margin-top: 8rem;
   justify-content: center;
-  background-color: #64DFDF;
-  height: 200px;
+  height: auto;
   font-weight: 600;
   font-size: 24px;
+  text-align: center;
 }
 
 .text-container {
@@ -169,16 +228,20 @@ body {
 .text-container > h2 {
   font-style: italic;
   margin-top: 1rem;
+  color: white;
+  font-size: 36px;
 }
 
 .text-container > p {
   margin-bottom: 1rem;
+  color: white;
 }
 
 .contact-section {
   display: flex;
+  margin-top: 8rem;
   width: 100%;
-  background-color: var(--contact);
+  height: 30px;
   height: 150px;
 }
 
@@ -190,28 +253,94 @@ body {
   margin: auto;
   justify-content: center;
   align-items: center;
-  background-color: var(--contact);
 }
 
 .logo-container i {
   cursor: pointer;
+  color: white;
+}
+
+.logo-container i:hover {
+  color: var(--contact);
 }
 
 .footer{
   display: flex;
   justify-content: center;
-  background-color: aliceblue;
-  width: vw;
   margin: auto auto 0;
   padding: 1rem;
+  border-top: 1px solid white;
 }
 
 .footer > p {
   width: 100vw;
   text-align: center;
   font-style: italic;
+  font-size: 20px;
+  color: white;
 }
 
+@media screen and (max-width: 1480px) {
+  .hero{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    text-align: center;
+  }
+
+  .intro-parent{
+    width: 80%;
+    margin-left: 0rem;
+  }
+
+  .intro-header{
+    margin-top: 4rem;
+  }
+
+  .intro-text{
+    margin-top: 2rem;
+    margin-bottom: 0;
+  }
+
+  .img-box-parent{
+    width: 80%;
+    margin-right: 0;
+    margin-left: 0rem;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .projects-section {
+    height: auto;
+  }
+
+  .projects-container {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 80%;
+    gap: 2rem;
+  }
+
+  #card1 {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+
+  #card3 {
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+
+  .project3-display{
+    margin-bottom: 0.5rem;
+  }
+}
 
 @media screen and (max-width: 790px) {
   body{
@@ -220,5 +349,30 @@ body {
 
   .hero {
     width: 790px;
+  }
+
+  .intro-parent{
+    width: 80%;
+    margin-left: 0;
+  }
+
+  .img-box-parent{
+    width: 80%;
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .intro-parent{
+    width: 80%;
+  }
+
+  .img-box-parent{
+    width: 80%;
+    margin-right: 0;
+  }
+
+  .text-container{
+    width: 375px;
   }
 }
