--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 
 .my-name {
   margin-left: 2rem;
+  margin-right: 2rem;
   color: var(--base-200);
   font-size: 32px;
 }
@@ -89,7 +90,7 @@ a, a:hover, a:visited, a:active {
 .hero {
   display: flex;
   justify-content: space-between;
-  height: 500px;
+  height: 100vh;
   width: 100vw;
   max-width: 100%;
   overflow: hidden;
@@ -108,7 +109,7 @@ a, a:hover, a:visited, a:active {
 
 .intro-header {
   color: var(--base-200);
-  margin-top: 4rem;
+  margin-top: 8rem;
   padding-left: 20px;
   padding-right: 20px;
   font-weight: 900;
@@ -119,7 +120,7 @@ a, a:hover, a:visited, a:active {
   color: var(--base-200);
   font-weight: 400;
   font-size: 40px;
-  margin-bottom: 5rem;
+  margin-bottom: 12rem;
   padding-left: 20px;
   padding-right: 50px;
 }
@@ -148,9 +149,9 @@ a, a:hover, a:visited, a:active {
   margin-top: 3rem;
   object-fit: contain;
   overflow: hidden;
-  width: 20rem;
-  height: 20rem;
-  border-radius: 200px;
+  width: 500px;
+  height: 500px;
+  border-radius: 500px;
 }
 
 .img-container img {
@@ -161,7 +162,7 @@ a, a:hover, a:visited, a:active {
 .projects-section {
   display: flex;
   flex-direction: column;
-  margin-top: 8rem;
+  margin-top: 4rem;
   text-align: center;
   width: 100%;
   height: 500px;
@@ -170,7 +171,6 @@ a, a:hover, a:visited, a:active {
 .projects-section > h2 {
   margin-top: 1rem;
   font-weight: 600;
-  font-style: italic;
   font-size: 36px;
   color: white;
 }
@@ -206,7 +206,7 @@ a, a:hover, a:visited, a:active {
   margin-top: 0.5rem;
   color: lightblue;
   font-style: italic;
-  font-size: 16px;
+  font-size: 24px;
 }
 
 .project-card {
@@ -215,12 +215,19 @@ a, a:hover, a:visited, a:active {
   background-color: lightblue;
   border-radius: 25px;
   object-fit: contain;
+  overflow: hidden;
+}
+
+.project2-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .projects-container p {
   margin-top: 1rem;
   color: white;
-  font-size: 20px;
+  font-size: 28px;
 }
 
 .projects-container p:hover {
@@ -254,7 +261,6 @@ a, a:hover, a:visited, a:active {
 }
 
 .text-container > h2 {
-  font-style: italic;
   margin-top: 1rem;
   color: white;
   font-size: 36px;
@@ -325,7 +331,7 @@ a, a:hover, a:visited, a:active {
   }
 
   .intro-header{
-    margin-top: 10rem;
+    margin-top: 6rem;
   }
 
   .intro-text{
@@ -386,6 +392,11 @@ a, a:hover, a:visited, a:active {
     gap: 2rem;
   }
 
+  .img-container {
+    width: 400px;
+    height: 400px;
+  }
+
   #card1 {
     margin-left: 0;
     margin-top: 1rem;
@@ -400,6 +411,10 @@ a, a:hover, a:visited, a:active {
   }
 
   .project3-display{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 0.5rem;
   }
 
@@ -428,8 +443,28 @@ a, a:hover, a:visited, a:active {
     width: 790px;
   }
 
+  .my-name {
+    margin-left: 1rem;
+  }
+
   .hero {
     width: 790px;
+  }
+
+  .projects-section h2 {
+    font-size: 48px;
+  }
+
+  .projects-section p {
+    font-size: 32px;
+  }
+
+  .projects-container p {
+    font-size: 40px;
+  }
+
+  .about-section h2 {
+    font-size: 48px;
   }
 
   .intro-parent{
@@ -440,6 +475,11 @@ a, a:hover, a:visited, a:active {
   .img-box-parent{
     width: 80%;
     margin-left: 0;
+  }
+
+  .img-container {
+    width: 400px;
+    height: 400px;
   }
 
   .text-container {
